src/test/ui/consts/const-eval/double_check2.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/double_check2.rs:15:1
   |
LL | / static FOO: (&Foo, &Bar) = unsafe {(
LL | |     Union { u8: &BAR }.foo,
LL | |     Union { u8: &BAR }.bar,
LL | | )};
   | |___^ type validation failed: encountered 5 at .1.<deref>, but expected a valid enum discriminant
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rust compiler repository if you believe it should not be considered undefined behavior

error[E0080]: it is undefined behavior to use this value
  --> $DIR/double_check2.rs:19:1
   |
LL | static FOO2: (&Foo, &Bar) = unsafe {(std::mem::transmute(&BAR), std::mem::transmute(&BAR))};
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 5 at .1.<deref>, but expected a valid enum discriminant
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rust compiler repository if you believe it should not be considered undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
